[gd_scene load_steps=4 format=3 uid="uid://cnpss81rdulih"]

[ext_resource type="Script" uid="uid://cjbqlir3qtkwv" path="res://scenes/game_scene/levels/level.gd" id="1_623lg"]
[ext_resource type="Script" uid="uid://ck7cdjnnkm4aq" path="res://scenes/game_scene/tutorial_manager.gd" id="4_bsimd"]
[ext_resource type="PackedScene" uid="uid://b8vsxuuyong8g" path="res://scenes/game_scene/tutorials/tutorial_1.tscn" id="5_fmabn"]

[node name="Level1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_623lg")
next_level_path = "res://scenes/game_scene/levels/level_2.tscn"

[node name="BackgroundColor" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2

[node name="ProductDevelopmentPane" type="Panel" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProductDevelopmentVBox" type="VBoxContainer" parent="MarginContainer/GridContainer/ProductDevelopmentPane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/GridContainer/ProductDevelopmentPane/ProductDevelopmentVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Product Development"
horizontal_alignment = 1

[node name="ProductCountLabel" type="Label" parent="MarginContainer/GridContainer/ProductDevelopmentPane/ProductDevelopmentVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Products: 0"
horizontal_alignment = 1

[node name="CreateProductButton" type="Button" parent="MarginContainer/GridContainer/ProductDevelopmentPane/ProductDevelopmentVBox"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "Create Product"

[node name="ProductListVBox" type="VBoxContainer" parent="MarginContainer/GridContainer/ProductDevelopmentPane/ProductDevelopmentVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MarketingPane" type="Panel" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarketingVBox" type="VBoxContainer" parent="MarginContainer/GridContainer/MarketingPane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="TitleLabel" type="Label" parent="MarginContainer/GridContainer/MarketingPane/MarketingVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Marketing"
horizontal_alignment = 1

[node name="CampaignCountLabel" type="Label" parent="MarginContainer/GridContainer/MarketingPane/MarketingVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Active Campaigns: 0"
horizontal_alignment = 1

[node name="BuyerStatesLabel" type="Label" parent="MarginContainer/GridContainer/MarketingPane/MarketingVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Oblivious: 20 | Educated: 0 | Interested: 0"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LeadsLabel" type="Label" parent="MarginContainer/GridContainer/MarketingPane/MarketingVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Leads Generated: 0"
horizontal_alignment = 1

[node name="CreateCampaignButton" type="Button" parent="MarginContainer/GridContainer/MarketingPane/MarketingVBox"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "Create Campaign"

[node name="CampaignListVBox" type="VBoxContainer" parent="MarginContainer/GridContainer/MarketingPane/MarketingVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="SalesPane" type="Panel" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SalesVBox" type="VBoxContainer" parent="MarginContainer/GridContainer/SalesPane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="TitleLabel" type="Label" parent="MarginContainer/GridContainer/SalesPane/SalesVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Sales"
horizontal_alignment = 1

[node name="LeadsProcessedLabel" type="Label" parent="MarginContainer/GridContainer/SalesPane/SalesVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Contacted: 0 | Qualified: 0"
horizontal_alignment = 1
autowrap_mode = 2

[node name="SalesPerformanceLabel" type="Label" parent="MarginContainer/GridContainer/SalesPane/SalesVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Converted: 0 | Revenue: $0"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ConversionRateLabel" type="Label" parent="MarginContainer/GridContainer/SalesPane/SalesVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Conversion Rate: 0%"
horizontal_alignment = 1

[node name="OperationsPane" type="Panel" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OperationsVBox" type="VBoxContainer" parent="MarginContainer/GridContainer/OperationsPane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="TitleLabel" type="Label" parent="MarginContainer/GridContainer/OperationsPane/OperationsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Operations"
horizontal_alignment = 1

[node name="SalesQueueLabel" type="Label" parent="MarginContainer/GridContainer/OperationsPane/OperationsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Sales Queue: 0"
horizontal_alignment = 1

[node name="ProductionLabel" type="Label" parent="MarginContainer/GridContainer/OperationsPane/OperationsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Production: 0 active / 0 queue"
horizontal_alignment = 1
autowrap_mode = 2

[node name="DeliveryLabel" type="Label" parent="MarginContainer/GridContainer/OperationsPane/OperationsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Delivery: 0 active / 0 queue"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ReviewsLabel" type="Label" parent="MarginContainer/GridContainer/OperationsPane/OperationsVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Customer Reviews: 0"
horizontal_alignment = 1

[node name="FinancePane" type="Panel" parent="MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FinanceVBox" type="VBoxContainer" parent="MarginContainer/GridContainer/FinancePane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="TitleLabel" type="Label" parent="MarginContainer/GridContainer/FinancePane/FinanceVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Finance"
horizontal_alignment = 1

[node name="CashBalanceLabel" type="Label" parent="MarginContainer/GridContainer/FinancePane/FinanceVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Cash Balance: $50,000"
horizontal_alignment = 1

[node name="RevenueLabel" type="Label" parent="MarginContainer/GridContainer/FinancePane/FinanceVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Revenue: $0"
horizontal_alignment = 1

[node name="ExpensesLabel" type="Label" parent="MarginContainer/GridContainer/FinancePane/FinanceVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Expenses: $0"
horizontal_alignment = 1

[node name="ProfitLossLabel" type="Label" parent="MarginContainer/GridContainer/FinancePane/FinanceVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Net Profit: $0"
horizontal_alignment = 1

[node name="TutorialManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_bsimd")
tutorial_scenes = Array[PackedScene]([ExtResource("5_fmabn")])

[connection signal="gui_input" from="MarginContainer/GridContainer/ProductDevelopmentPane" to="." method="_on_product_development_pane_gui_input"]
[connection signal="pressed" from="MarginContainer/GridContainer/ProductDevelopmentPane/ProductDevelopmentVBox/CreateProductButton" to="." method="_on_create_product_button_pressed"]
[connection signal="gui_input" from="MarginContainer/GridContainer/MarketingPane" to="." method="_on_marketing_pane_gui_input"]
[connection signal="pressed" from="MarginContainer/GridContainer/MarketingPane/MarketingVBox/CreateCampaignButton" to="." method="_on_create_campaign_button_pressed"]
[connection signal="gui_input" from="MarginContainer/GridContainer/SalesPane" to="." method="_on_sales_pane_gui_input"]
[connection signal="gui_input" from="MarginContainer/GridContainer/OperationsPane" to="." method="_on_operations_pane_gui_input"]
